--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,10 @@
-version: '3'
+version: "3"
 services:
   postgres:
     image: postgres:latest
     container_name: postgres
     ports:
-      - '6500:5432'
+      - "6500:5432"
     volumes:
       - progresDB:/data/postgres
     env_file:
