--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "pg": "^8.10.0",
     "pg-hstore": "^2.3.4",
     "prettier": "^2.8.7",
-    "sequelize": "^6.30.0"
+    "sequelize": "^6.30.0",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@types/dotenv": "^8.2.0",
